Fixed the chrome manifest v3 thing so it works on that now. Testing the build/pack thinng

--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "A browser extension that displays a badge on Steam profile pages showing user reputation statistics from the CSGORep API.",
   "main": "src/background/service-worker.js",
   "scripts": {
-    "build": "echo 'Build script placeholder'",
+    "build": "node scripts/build.mjs chrome && node scripts/build.mjs firefox",
+    "build:chrome": "node scripts/build.mjs chrome",
+    "build:firefox": "node scripts/build.mjs firefox",
+    "pack": "npm run pack:chrome && npm run pack:firefox",
+    "pack:chrome": "npm run build:chrome && cd dist/chrome && zip -r ../csgorep-badge-chrome.zip .",
+    "pack:firefox": "npm run build:firefox && cd dist/firefox && zip -r ../csgorep-badge-firefox.xpi .",
     "test": "echo 'Test script placeholder'"
   },
   "permissions": [
