--- a/src/manifest.chrome.json
+++ b/src/manifest.chrome.json
@@ -1,9 +1,10 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "CSGORep Badge",
   "version": "1.0.0",
   "description": "Shows CSGORep reputation badge on Steam profile pages",
-  "permissions": [
+  "permissions": [],
+  "host_permissions": [
     "https://api.csgo-rep.com/*",
     "https://steamcommunity.com/*"
   ],
@@ -16,13 +17,17 @@
     }
   ],
   "background": {
-    "scripts": ["background/background.js"],
-    "persistent": false
+    "service_worker": "background/background.js"
   },
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-  "web_accessible_resources": ["icons/logo.png"]
+  "web_accessible_resources": [
+    {
+      "resources": ["icons/logo.png"],
+      "matches": ["https://steamcommunity.com/*"]
+    }
+  ]
 }
