--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,8 +14,10 @@
     }
   },
   "permissions": [
+    "storage",
     "https://api.csgo-rep.com/*",
-    "https://steamcommunity.com/*"
+    "https://steamcommunity.com/*",
+    "https://omaranwari.com/*"
   ],
   "content_scripts": [
     {
@@ -47,3 +49,4 @@
     "icons/logo.png"
   ]
 }
+
