Revert "	modified:   .gitignore"
This reverts commit 2db804e83fede07a660223ce4d62c4b3abc8f210.

--- a/src/manifest.chrome.json
+++ b/src/manifest.chrome.json
@@ -4,13 +4,10 @@
   "version": "1.0.0",
   "description": "Shows CSGORep reputation badge on Steam profile pages",
   "data_collection_permissions": [],
-  "permissions": [
-    "storage"
-  ],
+  "permissions": [],
   "host_permissions": [
     "https://api.csgo-rep.com/*",
-    "https://steamcommunity.com/*",
-    "https://omaranwari.com/*"
+    "https://steamcommunity.com/*"
   ],
   "content_scripts": [
     {
@@ -35,4 +32,3 @@
     }
   ]
 }
-
